--- a/completed_code/videoinfo/package.json
+++ b/completed_code/videoinfo/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "electron": "electron ."
   },
-  "author": "",
+  "author": "user_",
+  "description":"app for server part"
   "license": "ISC",
   "dependencies": {
     "electron": "^1.6.6",
